# FalconSim

./: .gitignore  CMakeLists.txt  README.md
.cursor/rules/: cpprules.mdc  falconsim.mdc
examples/: CMakeLists.txt  basic_simulation.cpp  telemetry_server.cpp
src/: CMakeLists.txt
src/core/: CMakeLists.txt  Simulation.cpp  Simulation.hpp
src/gui/: CMakeLists.txt  ControlPanel.cpp  ControlPanel.hpp  Flight3DView.cpp  Flight3DView.hpp  MainWindow.cpp  MainWindow.hpp  TelemetryData.hpp  TelemetryWidget.cpp  TelemetryWidget.hpp  main.cpp  resources.qrc
src/gui/ui/: ControlPanel.ui  MainWindow.ui  TelemetryWidget.ui
src/network/: CMakeLists.txt  TelemetryServer.cpp  TelemetryServer.hpp
src/physics/: CMakeLists.txt  FlightDynamics.cpp  FlightDynamics.hpp
tests/: CMakeLists.txt  simulation_tests.cpp
